--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@400..700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Jersey+10&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sevillana&display=swap");
 .font-1 {
   font-family: "Edu VIC WA NT Beginner", cursive;
   font-optical-sizing: auto;
@@ -10,4 +11,9 @@
 .font-2 {
   font-family: "Jersey 10", sans-serif;
   font-weight: 900;
+}
+.font3 {
+  font-family: "Sevillana", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
